maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:4: error: ')' expected but ';' found.
def garM() { if (aMurD()) {if (estFaceMur()) {gauche()} else avance()} else (droite();avance())
                                                                                     ^Escaper:4: error: ';' expected but ')' found.
def garM() { if (aMurD()) {if (estFaceMur()) {gauche()} else avance()} else (droite();avance())
                                                                                              ^